--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 /* =========================== Main CSS Code =============================== */
+:root {
+    scrollbar-color: transparent transparent;
+  }
 .about__content {
     margin-left: auto;
     margin-right: auto;
@@ -33,6 +36,7 @@
 body {
     background-image: url(../../static/imgs/Bground.png);
     font-family: 'Poppins', sans-serif;
+    overflow: overlay;
 }
 
 .chatroom__container {
@@ -48,7 +52,7 @@ body {
     margin-bottom: 20px;
     background: rgb(255,255,255);
     background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(142,134,255,1) 100%);
-    overflow: overlay;
+    overflow: hidden;
 }
 
 .chatroom__container:hover {
