--- a/main_app/templates/group/main.html
+++ b/main_app/templates/group/main.html
@@ -15,7 +15,7 @@
           <a href='/' class='btn1'> Home </a>
         </div>
          <div class='home__button__container'>
-           <a href='/chatroom/create' class='btn1'> Create Chatroom </a>
+           <a href='/chatroom/create' class='btn1'> Create or Join Chatroom </a>
          </div>
          <div class='home__button__container'>
           <a href='/lobby' class='btn1'>Video Chat</a>
