--- a/static/styles/createChatroom.css
+++ b/static/styles/createChatroom.css
@@ -35,7 +35,6 @@ body {
 .login-box .user-box input {
   width: 100%;
   padding: 10px 0;
-  font-size: 16px;
   color: #fff;
   margin-bottom: 30px;
   border: none;
@@ -48,7 +47,8 @@ body {
   top:0;
   left: 0;
   padding: 10px 0;
-  font-size: 16px;
+  font-weight: bold;
+  font-style: italic;
   color: #fff;
   pointer-events: none;
   transition: .5s;
@@ -172,6 +172,35 @@ body {
   background-color: rgba(73, 43, 226, 0.825);
   border-style: none;
   border-radius: 50px;
+}
+
+.tag {
+  margin-left: 110px;
+}
+
+.chatrooms__all {
+  margin-left: 15px;
+  margin-top: 5px;
+  background-color: rgba(240, 248, 255, 0.656);
+  width: fit-content;
+  height: fit-content;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 15px;
+  -webkit-box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.75);
+}
+
+.chatrooms__all:hover {
+  background-color: white;
+  -webkit-box-shadow: 0px 0px 10px 5px rgba(247,255,10,1);
+  -moz-box-shadow: 0px 0px 10px 5px rgba(247,255,10,1);
+  box-shadow: 0px 0px 10px 5px rgba(247,255,10,1);
+}
+
+.chatroom__btn:hover {
+  font-size: 17px;
 }
 
 .logo {
