--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -162,7 +162,7 @@ box-shadow: 5px 5px 5px -2px rgba(0,0,0,1);
 }
 
 .footer__copyright {
-    color: blue;
+    text-align: center;
 }
 
 .home__title {
