--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -14,5 +14,6 @@
       privately with others in the meeting.
     </p>
     <p>Created by: <a href='https:www.linkedin.com/in/amoreno00' target=”_blank” >Alejandro</a> | <a href='https:www.google.com' target=”_blank” >Aiden</a> | <a href='https://www.linkedin.com/in/calvin-moldenhauer/' target=”_blank” >Calvin</a> | <a href='https:www.google.com' target=”_blank” >Keara</a></p>
+    <small>&copy; FACE2FACE</small>
 </div>
 {% endblock %}
