--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -53,6 +53,6 @@
   
   
   </html>
-  <div className="footer__copyright">
+  {% comment %} <div className="footer__copyright">
     <small>&copy; FACE2FACE</small>
-  </div>
+  </div> {% endcomment %}
