--- a/main_app/templates/contact.html
+++ b/main_app/templates/contact.html
@@ -8,7 +8,7 @@
 </div>
 <div class='contact__container'>
 
-  <form action="https://formsubmit.co/calvickauer@gmail.com" method="POST" >
+  <form action="https://formsubmit.co/videoface2face@gmail.com" method="POST" >
     <input name="name" class=" effect-1 m-1" type="text" id="name" placeholder=" Your Name" required>
     <span class="Focus-border"></span>
     <input name="email"  class=" effect-1 m-1" type="text" placeholder=" Your Email" id="Email" required>
