join stream button

--- a/main_app/templates/group/lobby.html
+++ b/main_app/templates/group/lobby.html
@@ -19,8 +19,8 @@
         <div class="form-field">
             <input type="text" name="username" placeholder="Enter your username" style="text-transform: uppercase;">
         </div>
-        <div class="form-field">
-            <input type="submit" value="Join Stream">
+        <div class="join">
+            <input type="submit" value="Join Stream" class='join__stream'>
         </div>
     </form>
 </section>
